# lakemaid

./: Cargo.toml  README.md  build.rs  test.rs
data/: function-app-dedicated-plan.json
dotnet/: Lib.cs  dotnet.csproj
in/: general.rs
src/: interop.rs  lib.rs  main.rs  mappings.rs
src/commands/: class.rs  flowchart.rs  mod.rs
src/fs/: formats.rs  mod.rs
src/mappings/: rs.rs
src/mermaid/: mod.rs
src/mermaid/class_diagram/: mod.rs  nodes.rs  rs.rs
src/mermaid/flowchart/: mod.rs
tests/: project.rs  singular_files.rs
tests/in/: class_with_generics.rs  simple_class.rs  simple_relationships.rs
tests/keys/: class_with_generics_key.md  simple_class_key.md
